fix bug when loading userInfo